--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -22,7 +21,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical" >
-
 
             <RelativeLayout
                     android:id="@+id/relativeLayout1"
@@ -47,14 +45,13 @@
                         android:layout_alignBottom="@+id/imgView_userIcon"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/imgView_userIcon"
-                        android:hint="Nom du Traiteur"
+                        android:hint="write something"
                         android:id="@+id/txTraiteurNom"
+                        android:inputType="text"
                         android:paddingLeft="20dp"
                         android:textSize="15sp" />
 
             </RelativeLayout>
-
-
 
             <Button
                     android:id="@+id/btnSend"
@@ -64,16 +61,14 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:layout_marginTop="15dp"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"
                     android:layout_marginBottom="15dp"
                     android:background="@color/colorPrimary"
-                    android:text="Envoyer"
+                    android:text="Send to another fragment"
                     android:textColor="@color/white" />
 
-
         </RelativeLayout>
-
-
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
 
