--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -32,20 +31,16 @@
                     android:layout_marginRight="30dp"
                     android:layout_marginTop="30dp">
 
-
-
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:hint="Valeur envoyee"
+                        android:hint="Value send by user"
                         android:id="@+id/txreceiver"
                         android:padding="20dp"
                         android:textSize="25dp" />
 
             </RelativeLayout>
-
-
 
             <Button
                     android:id="@+id/btnBack"
@@ -57,14 +52,10 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="15dp"
                     android:background="@color/colorAccent"
-                    android:text="Retourner"
+                    android:text="Return"
                     android:textColor="@color/white" />
 
-
         </RelativeLayout>
-
-
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
 
