--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
         tools:context=".MainActivity">
 
 
@@ -16,7 +16,7 @@
             android:layout_marginTop="30dp"
             android:background="@color/colorPrimary"
             android:layout_gravity="center"
-            android:text="Ouvrir"
+            android:text="Open main"
             android:textColor="@color/white" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
